@@ -17,3 +17,12 @@ manage them.
 - Decryption Capability
 - Batch Processing
 - Security Measures
+
+## Setup
+- Clone the repository to your local machine
+- Open the folder in the code editor of your choice
+- Go to the src folder and right click on the .java file and add a build path, ensure that the JavaFX library is added
+- Right on the same file and click run configurations, click the arguments tab and add the following
+  *--add-modules javafx.controls,javafx.fxml*
+- Make sure all the checkboxes in the arguments tab are **unchecked** click 'Apply'
+- Run the code and test the application!
